--- a/index.css
+++ b/index.css
@@ -49,12 +49,13 @@
     color: #333;
   }
   
-  input[type="text"], input[type="submit"] {
+  input[type="text"],input[type="email"],input[type="number"], input[type="submit"] {
     width: 100%;
     height: 40px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    overflow: hidden;
   }
   
   input[type="text"]:focus {
